<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="presenter"
            type="org.d3ifcool.finpro.core.presenters.InformasiPresenter" />

        <variable
            name="token"
            type="String" />

    </data>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_big_16dp">

            <ImageView
                android:src="@drawable/ic_editor_info"
                style="@style/image_all_editor_view"/>

            <TextView
                android:layout_marginStart="@dimen/dimen_small_4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_judul"
                android:layout_marginTop="@dimen/dimen_medium_8dp"
                android:layout_marginBottom="@dimen/dimen_medium_8dp"
                android:textSize="@dimen/text_size_title_small_18sp"
                android:textColor="@color/colorPrimary"/>

            <EditText
                android:id="@+id/act_koor_edittext_judul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/hint_judul"
                android:text="@={presenter.judul}"/>

            <TextView
                android:layout_marginStart="@dimen/dimen_small_4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_informasi"
                android:layout_marginTop="@dimen/dimen_medium_8dp"
                android:layout_marginBottom="@dimen/dimen_medium_8dp"
                android:textSize="@dimen/text_size_title_small_18sp"
                android:textColor="@color/colorPrimary"/>

            <EditText
                android:id="@+id/act_koor_edittext_deskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/hint_informasi_isi"
                android:text="@={presenter.deskripsi}"
                android:layout_marginBottom="@dimen/dimen_big_ultra_32dp"/>

            <Button
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/act_koor_info_button_simpan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_click_tambah_info"
                android:textColor="@color/colorTextWhite"
                android:background="@drawable/box_border_button_primary"
                android:onClick="@{()->presenter.createInformasi(token)}"/>

        </LinearLayout>

    </ScrollView>

</layout>