...
    <item type="id" name="act_dsn_pmb_recyclerview"/>
    <item type="id" name="ctn_dsn_pemberitahuan_circle_image"/>

    <!--Mahasiswa-->
    <!--Super User-->
    <item type="id" name="frg_koor_info_home_recyclerview"/>
    <item type="id" name="frg_koor_info_home_fab"/>
    <item type="id" name="profile_header_container" />
    <item type="id" name="profile_body_container" />
    <item type="id" name="profile_body_status_sk" />
    <item type="id" name="profile_body_pembimbing" />


...
